--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="certificates-box">
                 <a target="_blank" href="python cysco.png">
                 <div class="img-container">
-                <img src="python cysco.png"style="width:100%">
+                <img src="https://github.com/Likhita-26/Personal-Portfolio/blob/main/pics/1stop.png?raw=true"style="width:100%">
                 </div>
                 </a>
             </div>
