--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="https://github.com/Likhita-26"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.facebook.com/yerra.likhita"><i class="fa-brands fa-facebook"></i></a>
             </div>
-            <a href="Likhita_tech.pdf"class="btn">Download CV</a>
+            <a href="https://drive.google.com/drive/u/0/home"class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
