--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="social-media">
                 <a href="http://www.linkedin.com/in/likhita-yerra-m05"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Likhita-26"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.facebook.com/yerra.likhita"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.hackerrank.com/profile/ylikhita01"><i class="fa-brands fa-hackerrank"></i></a>
             </div>
             <a href="https://drive.google.com/file/d/1EHxN4YNry0TdWwwQgz4RStCDFD7dVvMh/view"class="btn">Download CV</a>
         </div>
