--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <h2 class="heading">ABOUT<span>Me</span></h2>
             <h3>Frontend Developer</h3>
             <p>My name is Likhita Yerra,<br>
-                If I describe myself in two words hardworking and responsible. I’m dedicated and realable. Continuously putting efforts to achieve my goal. Strength that I have show in my life is staying calm under high pressure situations and problem solving.
-                I’m familier with C, Python, HTML, CSS,JavaScript. 
-                </p>
+                I’m a hard-working, passionate person who believes in the importance of education and accessibility to technological
+                advancements.Want to secure an entry-level position in a reputable organization, utilizing my skills and knowledge to drive
+                growth. Seeking challenges and opportunities for professional development. Eager to learn and adapt                </p>
             <h3><span>Skills</span></h3>
                 <form method="post">
                     <div class="skills">
@@ -64,6 +64,8 @@
                     <input type="submit" value="Arduino"placeholder="Arduino"class="btns">
                     <input type="submit" value="VLSI"placeholder="VLSI"class="btns">
                     <input type="submit" value="Verilog"placeholder="Verilog"class="btns"></div>
+                    <input type="submit" value="C Sharp"placeholder="Css"class="btns">
+
                 </form>    
     </section>
     <section class="Projects" id="Projects">
@@ -76,6 +78,30 @@
                     <p>A web-based application for managing school operations.
                         – Features: student data management, attendance tracking, grade management and user authentication.</p>
                     <a href="https://github.com/Likhita-26/School-Management-System"><i class="fa-sharp fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="https://raw.githubusercontent.com/Likhita-26/Personal-Portfolio/main/pics/img1.jpg">
+                <div class="portfolio-layer">
+                    <h4>Personal Portfolio</h4>
+                    <p>Developed and deployed School Management System with responsive UI, Integrated frontend with Django, collaborated with team to develop web-based application for managing student data, attendance, and grades.</p>
+                    <a href="https://github.com/Likhita-26/School-Management-System"><i class="fa-sharp fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="https://raw.githubusercontent.com/Likhita-26/Personal-Portfolio/main/pics/img7.jpg">
+                <div class="portfolio-layer">
+                    <h4>Two Player Trivia Battle Game</h4>
+                    <p>Implemented real-time score tracking, question randomization, and an interactive user interface to improve engagement.</p>                  
+                    <a href="https://likhita-26.github.io/Hackathon-2.0/"><i class="fa-sharp fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="https://raw.githubusercontent.com/Likhita-26/Personal-Portfolio/main/pics/img8.jpg">
+                <div class="portfolio-layer">
+                    <h4>YouTube Clone</h4>
+                    <p>Built a YouTube clone with featuring video playback, search functionality, and a responsive layout. Demonstrates expertise in front-end development and responsive web design. Features seamless mobile and desktop experience. </p>
+                    <a href="#"><i class="fa-sharp fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
