--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="https://www.hackerrank.com/profile/ylikhita01"><i class="fa-brands fa-hackerrank"></i></a>
                 
             </div>
-            <a href="https://drive.google.com/file/d/1EHxN4YNry0TdWwwQgz4RStCDFD7dVvMh/view"class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/1EjK6tVKpEoZwh3rMDeZmu_Dyt82ItA0a/view?usp=sharing"class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
