--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <h3>Hi, My name is</h3>
             <h1>Likhita Yerra</h1>
             <h3>And I'm a <span>Frontend Developer </span></h3>
-            <p>Hello. My name is Likhita Yerra.Currently Persuing batchelors in the stream of Electronics and Communication Engineering in Bhimavaram. I am looking for a challenging job with a rapidly growing organization where I can learn new skills and develop my knowledge.</p>
+            <p>I’m a smart worker, passionate person who believes in the importance of education and accessibility to technological
+advancement, seeking to contribute to the company’s growth and further develop my skills.</p>
             <div class="social-media">
                 <a href="http://www.linkedin.com/in/likhita-yerra-m05"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Likhita-26"><i class="fa-brands fa-github"></i></a>
@@ -47,9 +48,15 @@
             <h2 class="heading">ABOUT<span>Me</span></h2>
             <h3>Frontend Developer</h3>
             <p>My name is Likhita Yerra,<br>
-                I’m a hard-working, passionate person who believes in the importance of education and accessibility to technological
-                advancements.Want to secure an entry-level position in a reputable organization, utilizing my skills and knowledge to drive
-                growth. Seeking challenges and opportunities for professional development. Eager to learn and adapt                </p>
+               I’m from Vizianagaram. Currently pursuing my bachelors in the stream of Electronics and Communication Engineering at SRKR College. 
+
+If I describe myself in two words, I’m a self-learner and hard-working person. I’m so passionate about coding. I’m constantly searching to enhance my skills. 
+
+I have done couple of internships and projects have learned all those programming languages which are not in my academics, I have learned all these by my own. I considered myself as a focused person and always working towards my goals. I’m very optimistic person in tough times. 
+
+I enjoy drawing in my free time it feels relaxed to me and I love capturing pictures of beautiful nature.  
+
+I’m super excited to get started with this round. Yeah, that’s all about me, and how are you doing?  </p>
             <h3><span>Skills</span></h3>
                 <form method="post">
                     <div class="skills">
@@ -65,11 +72,33 @@
                     <input type="submit" value="VLSI"placeholder="VLSI"class="btns">
                     <input type="submit" value="Verilog"placeholder="Verilog"class="btns"></div>
                     <input type="submit" value="C Sharp"placeholder="Css"class="btns">
+                    <input type="submit" value="Flask"placeholder="Css"class="btns">
+                    <input type="submit" value="Django"placeholder="Css"class="btns">
 
                 </form>    
     </section>
     <section class="Projects" id="Projects">
         <h2 class="heading">Latest <span>Projects</span></h2>
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="https://raw.githubusercontent.com/Likhita-26/Personal-Portfolio/main/pics/img6.jpg">
+                <div class="portfolio-layer">
+                    <h4>Two player Trivia Battle game</h4>
+                    <p>Technologies used: HTML, CSS, JavaScript.Implemented real-time score tracking, question randomization, and an interactive user interface to improve
+engagement.</p>
+                    <a href="https://github.com/Likhita-26/School-Management-System"><i class="fa-sharp fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+         <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="https://raw.githubusercontent.com/Likhita-26/Personal-Portfolio/main/pics/img6.jpg">
+                <div class="portfolio-layer">
+                    <h4>Currency Converter</h4>
+                    <p>Technologies used: HTML, CSS, Python, Flask. Developed a Currency Converter to provide real-time currency conversion. The application allows users to
+select different currencies and get updated exchange rates.</p>
+                    <a href="https://github.com/Likhita-26/School-Management-System"><i class="fa-sharp fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
         <div class="portfolio-container">
             <div class="portfolio-box">
                 <img src="https://raw.githubusercontent.com/Likhita-26/Personal-Portfolio/main/pics/img6.jpg">
